[package]
name = "bombsquadviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.75.0", optional = true }
anyhow = { version = "1.0.62", optional = true }
uvc = { version = "0.2.0", optional = true }

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["anyhow", "uvc"]

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["anyhow", "opencv"]